language-server/src/tests/snapshots/gleam_language_server__tests__inlay_hints__do_not_show_hints_by_default.snap
---
source: language-server/src/tests/inlay_hints.rs
expression: hints
---
const int_val = 0

fn identity(x) {
  x
}

fn ret_str(_x) {
  "abc"
}

pub fn example_pipe() {
  int_val
  |> ret_str()
  |> identity()
}
