language-server/src/tests/snapshots/gleam_language_server__tests__inlay_hints__hints_in_use.snap
---
source: language-server/src/tests/inlay_hints.rs
expression: hints
---
const int_val = 0

fn identity(x) {
  x
}

fn main(f) {
  use a <- f()
  int_val "Int"
  |> identity() "Int"
}
