language-server/src/tests/snapshots/gleam_language_server__tests__inlay_hints__hints_nested_for_apply_fn_let.snap
---
source: language-server/src/tests/inlay_hints.rs
expression: hints
---
const int_val = 0

fn identity(x) {
  x
}

fn main() {
  let f = identity(fn() {
    int_val "Int"
    |> identity() "Int"
  })
}
