language-server/src/tests/snapshots/gleam_language_server__tests__inlay_hints__no_hints_when_same_line.snap
---
source: language-server/src/tests/inlay_hints.rs
expression: hints
---
fn identity(x) {
  x
}

fn ret_str(_x) {
  "abc"
}

pub fn example_pipe() {
  0 |> ret_str() |> identity()
}
