language-server/src/tests/snapshots/gleam_language_server__tests__inlay_hints__show_hints_in_params.snap
---
source: language-server/src/tests/inlay_hints.rs
expression: hints
---
fn example_fn(
  flex_type_arg": a",
  b: do_not_show_this,
) { 0 }
