language-server/src/tests/snapshots/gleam_language_server__tests__inlay_hints__show_hints_in_return.snap
---
source: compiler-core/src/language_server/tests/inlay_hints.rs
expression: hints
---
[
  {
    "position": {
      "line": 1,
      "character": 21
    },
    "label": "-> Int",
    "kind": 1,
    "paddingLeft": true
  }
]
