language-server/src/tests/snapshots/gleam_language_server__tests__inlay_hints__show_many_hints.snap
---
source: compiler-core/src/language_server/tests/inlay_hints.rs
expression: hints
---
[
  {
    "position": {
      "line": 12,
      "character": 19
    },
    "label": "Int",
    "kind": 1,
    "paddingLeft": true
  },
  {
    "position": {
      "line": 13,
      "character": 24
    },
    "label": "String",
    "kind": 1,
    "paddingLeft": true
  },
  {
    "position": {
      "line": 14,
      "character": 25
    },
    "label": "String",
    "kind": 1,
    "paddingLeft": true
  }
]
